Added accuweather widget in display2

--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -110,7 +110,7 @@
     });
   }
 
-  // Updates the map location
+  // Updates the weather forecast
   function updateWeatherForecast()
   {
     $('#weatherForecast').html($('#weatherForecast').html());
