Added timerManager to keep track of setting timeout based on activity status

--- a/app/views/display1/_baseline.html.erb
+++ b/app/views/display1/_baseline.html.erb
@@ -1,1 +1,1 @@
-<%= image_tag display1_baseline_chart_path(baseline_id), :class => "baseline", :id => "baseline#{baseline_id}" %>
+<%= image_tag "", :class => "baseline", :id => "baseline#{baseline_id}" %>
