--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -57,11 +57,11 @@
 
         drawWaterfallRows(response.id, response.startRow, response.endRow, response.data);
 
-        setTimeout(updateWaterfallCallback, <%=  ApplicationController::TIMEOUT_WATERFALL %>);
+        timeoutManager.setTimeout(updateWaterfallCallback, <%= ApplicationController::TIMEOUT_WATERFALL %>);
       },
       error:    function() {
         // We should handle error here
-        setTimeout(updateWaterfallCallback, <%=  ApplicationController::TIMEOUT_RETRY_SHORT %>);
+        timeoutManager.setTimeout(updateWaterfallCallback, <%= ApplicationController::TIMEOUT_RETRY_SHORT %>);
       },
       datatype: 'json'
     });
@@ -69,13 +69,18 @@
 
   function updateBaseline(id)
   {
+    var updateBaselineCallback = function() { updateBaseline(id); };
+    timeoutManager.setTimeout(updateBaselineCallback, <%= ApplicationController::TIMEOUT_BASELINE %>);
+
     // to bypass browser caching, we need to append a random parameter to the URL
-    d = new Date();
+    var d = new Date();
     $('#baseline' + id).attr('src', '/display1/baseline_chart/' + id + '?' + d.getTime());
   }
 
   function updateBeamInfo(id)
   {
+    var updateBeamInfoCallback = function() { updateBeamInfo(id); };
+
     // Take id and make AJAX query
     $.ajax({
       type:     'GET',
@@ -99,9 +104,12 @@
         $('#beam' + id + ' .beam_description').text(response.description);
         $('#beam' + id + ' .beam_frequency').text(response.freq + ' MHz');
         updateFrequencyCoverage(id, response.freq);
+
+        timeoutManager.setTimeout(updateBeamInfoCallback, <%= ApplicationController::TIMEOUT_BEAM_INFO %>);
       },
       error:    function() {
         // We should handle error here
+        timeoutManager.setTimeout(updateBeamInfoCallback, <%= ApplicationController::TIMEOUT_RETRY_SHORT %>);
       },
       datatype: 'json'
     });
@@ -109,6 +117,7 @@
 
   function updateActivity()
   {
+    var updateActivityCallback = function() { updateActivity(); };
     // Take id and make AJAX query
     $.ajax({
       type:     'GET',
@@ -117,9 +126,24 @@
         $('#activity-id').text(response.id);
         $('#current-observation-id').text(response.status);
 
+        if(response.status == "Observing")
+        {
+          if(!timeoutManager.isObserving)
+          {
+            timeoutManager.isObserving = true;
+            timeoutManager.startObserving(initTimers());
+          }
+        }
+        else
+        {
+          timeoutManager.isObserving = false;
+        }
+
+        setTimeout(updateActivityCallback, <%= ApplicationController::ApplicationController::TIMEOUT_ACTIVITY %>);
       },
       error:    function() {
         // We should handle error here
+        setTimeout(updateActivityCallback, <%= ApplicationController::ApplicationController::TIMEOUT_RETRY_LONG %>);
       },
       datatype: 'json'
     });
@@ -159,29 +183,25 @@
   // Register display for automatic updates
   function initTimers()
   {
-    // Use constants defined in ApplicationController.... is this the correct way
-    // to reference static constants?
-    registerElementTimer(function() { updateActivity(); }, <%= ApplicationController::TIMEOUT_ACTIVITY %> );
-
     // Time updates for antenna id 1
     updateWaterfall(1);
-    registerElementTimer(function() { updateBaseline(1); }, <%=  ApplicationController::TIMEOUT_BASELINE %>);
-    registerElementTimer(function() { updateBeamInfo(1); }, <%=  ApplicationController::TIMEOUT_BEAM_INFO %>);
+    updateBaseline(1);
+    updateBeamInfo(1);
 
     // Time updates for antenna id 2
     updateWaterfall(2);
-    registerElementTimer(function() { updateBaseline(2); }, <%=  ApplicationController::TIMEOUT_BASELINE %>);
-    registerElementTimer(function() { updateBeamInfo(2); }, <%=  ApplicationController::TIMEOUT_BEAM_INFO %>);
+    updateBaseline(2);
+    updateBeamInfo(2);
 
     // Time updates for antenna id 3
     updateWaterfall(3);
-    registerElementTimer(function() { updateBaseline(3); }, <%=  ApplicationController::TIMEOUT_BASELINE %>);
-    registerElementTimer(function() { updateBeamInfo(3); }, <%=  ApplicationController::TIMEOUT_BEAM_INFO %>);
+    updateBaseline(3);
+    updateBeamInfo(3);
   }
 
   $(window).load(function()
   {
-    initTimers();
+    updateActivity();
   });
 
 </script>
