--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -40,6 +40,8 @@
   // Updates the map location
   function updateMapLocation()
   {
+    var updateMapLocationCallback = function() { updateMapLocation(); };
+
     // Take id and make AJAX query
     $.ajax({
       type:     'GET',
@@ -113,9 +115,12 @@
          map.addOverlay(gp);
          gp.show();               // Show the overlay
          map.panTo( primary_beam_ll );  // Pan center of the map to the primary beam location
+
+        timeoutManager.setTimeout(updateMapLocationCallback,  <%= ApplicationController::TIMEOUT_ACTIVITY %>);
       },
       error:    function() {
         // We should handle error here
+        timeoutManager.setTimeout(updateMapLocationCallback,  <%= ApplicationController::TIMEOUT_RETRY_SHORT %>);
       },
       datatype: 'json'
     });
@@ -153,14 +158,54 @@
     $('#webcamImage' + id).attr('src', 'http://atacam.seti.org/panorama/Pan' + panorama_id + ".jpg" + '?' + d.getTime());
   }
 
+
+  function updateActivity()
+  {
+    var updateActivityCallback = function() { updateActivity(); };
+    // Take id and make AJAX query
+    $.ajax({
+      type:     'GET',
+      url:      '<%= display1_activity_path %>',
+      success:  function(response) {
+        $('#activity-id').text(response.id);
+        $('#current-observation-id').text(response.status);
+
+        if(response.status == "Observing")
+        {
+          if(!timeoutManager.isObserving)
+          {
+            timeoutManager.isObserving = true;
+            timeoutManager.startObserving(initTimers());
+          }
+        }
+        else
+        {
+          timeoutManager.isObserving = false;
+        }
+
+        setTimeout(updateActivityCallback, <%= ApplicationController::ApplicationController::TIMEOUT_ACTIVITY %>);
+      },
+      error:    function() {
+        // We should handle error here
+        setTimeout(updateActivityCallback, <%= ApplicationController::ApplicationController::TIMEOUT_RETRY_LONG %>);
+      },
+      datatype: 'json'
+    });
+  }
+
+  function initTimers()
+  {
+    updateMapLocation();
+  }
+
   $(document).ready(function()
   {
     initialize();
     $(window).unload( function () { GUnload(); } );
 
-    registerElementTimer(function() { updateMapLocation(); },  <%= ApplicationController::TIMEOUT_ACTIVITY %>);
-    registerElementTimer(function() { updateWeatherForecast(); },  <%= ApplicationController::TIMEOUT_WEATHER %>);
-    registerElementTimer(function() { updateWebCam(); },  <%= ApplicationController::TIMEOUT_WEBCAM %>);
+    updateActivity();
+    timeoutManager.registerTimeout(function() { updateWeatherForecast(); },  <%= ApplicationController::TIMEOUT_WEATHER %>);
+    timeoutManager.registerTimeout(function() { updateWebCam(); },  <%= ApplicationController::TIMEOUT_WEBCAM %>);
   })
 
 </script>
