--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <head>
   <title><%= title %></title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag 'jquery-1.4.4.min', 'utilities', 'processing-1.0.0.min', 'application', 'display1' %>
+  <%= javascript_include_tag 'jquery-1.4.4.min', 'utilities', 'processing-1.0.0.min', 'application' %>
   <%= csrf_meta_tag %>
 
   <%= yield(:head) %>
